zad2/k8s_extra/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2  # Zwiększam do 2, żeby lepiej widzieć rolling update!
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0  # Podczas aktualizacji żaden pod nie może być niedostępny
      maxSurge: 1        # Możey być 1 dodatkowy pod ponad limit podczas aktualizacji
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: brilliant-frontend:v1 # To zmieniam komendą na v2 później
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        # SONDY ---
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
