zad2/k8s_extra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brilliant-ingress
spec:
  rules:
    - host: brilliantapp.zad
      http:
        paths:
          # Ruch do API (backend)
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          # Ruch do administracji Django (opcjonalnie)
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          # Ruch do statycznego frontendu (reszta)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
